2002-07-09  Brian Cameron  <Brian.Cameron@sun.com>

	* configure.in: Added -with-esd-dir option.
	* esound.pc.in: Added esd_serverdir
	* Makefile.am:  ADD -DSERVERDIR to INCLUDES
	* esdlib.c:     Call esd from SERVERDIR.  Replaced sizeof()
                    call with strlen() which is more appropriate.
	Allow users to specify the location of the esd executable.  This
	is useful for setups which want to place the esd daemon in
	libexec rather than bin.

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.28

2002-06-19    <b@cuba.mandrakesoft.com>

        * esdlib.c: (is_host_local), (esd_open_sound):
        Fix esd not starting when DISPLAY is set to localhost
        but esd is not running in tcp mode (bug from Edward-Liu, patch
        from Elliot)
	 

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

        * audio_alsa09.c: (initAlsa), (esd_audio_open), (esd_audio_flush):
        Add more check before doing ALSA calls (Santiago Otero)
	

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

        * players.c: (read_player): revert locking of audio stream patch, this
	patch breaks esd when used in TCP mode on localhost (Santiago Otero)
	

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

        * esddsp.in: remove bashim (PLD)
	

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* clients.c: (get_new_clients): don't use tcp wrapper for unix socket
	(Debian)

2002-06-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (main):
	Fix problem with via82cxxx sound driver 
	(patch provided by Samual Audet <guardia@step.polymtl.ca>)

2002-06-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* docs/esd.1.in:
	* esd.c: (main):
	Add -promiscuous mode to disable authentication when
	starting daemon. Fix Bug #85099 
	(patch from Rebecka Svanberg)

2002-06-07  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.27

2002-06-05  Frederic Crozat  <fcrozat@mandrakesoft.com>
