@@ -97,9 +97,8 @@ fi
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 
-LD_PRELOAD_PATH=@libdir@
-LD_PRELOAD='libesddsp.so.@ESD_MAJOR_VERSION@ libesd.so.@ESD_MAJOR_VERSION@'
-export LD_PRELOAD_PATH LD_PRELOAD
+LD_PRELOAD="@libdir@/libesddsp.so.@ESD_MAJOR_VERSION@ @libdir@/libesd.so.@ESD_MAJOR_VERSION@ $LD_PRELOAD"
+export LD_PRELOAD
 
 # invoke the program with the args given
 exec "$@"
